handle empty response

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,7 +33,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="32dp"
-            android:text="@{String.format(@string/cases_confirmed, viewModel.response.confirmed)}"
+            android:text="@{viewModel.confirmed}"
             android:visibility="@{viewModel.dataVisibility}"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_date"
@@ -45,7 +45,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16sp"
-            android:text="@{String.format(@string/deaths_confirmed, viewModel.response.deaths)}"
+            android:text="@{viewModel.deaths}"
             android:visibility="@{viewModel.dataVisibility}"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_confirmed"
