--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,68 +15,63 @@
         tools:context=".ui.HomeActivity">
 
         <TextView
-            android:id="@+id/tv_date"
+            android:id="@+id/dateTitleText"
             style="@style/Title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:visibility="@{viewModel.dataVisibility}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="Date"/>
 
         <TextView
-            android:id="@+id/tv_confirmed"
+            android:id="@+id/casesConfirmedText"
             style="@style/Subtitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="32dp"
             android:text="@{viewModel.confirmed}"
-            android:visibility="@{viewModel.dataVisibility}"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_date"
+            app:layout_constraintTop_toBottomOf="@+id/dateTitleText"
             tools:text="Casos confirmados" />
 
         <TextView
-            android:id="@+id/tv_deaths"
+            android:id="@+id/casesDeathText"
             style="@style/Subtitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16sp"
             android:text="@{viewModel.deaths}"
-            android:visibility="@{viewModel.dataVisibility}"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_confirmed"
+            app:layout_constraintTop_toBottomOf="@+id/casesConfirmedText"
             tools:text="Muertes confirmados" />
 
         <ImageView
-            android:id="@+id/imageView"
+            android:id="@+id/imageHome"
             android:layout_width="200dp"
             android:layout_height="200dp"
             android:src="@drawable/home"
-            android:visibility="@{viewModel.dataVisibility}"
-            app:layout_constraintBottom_toTopOf="@+id/bt_select_date"
+            app:layout_constraintBottom_toTopOf="@+id/buttonDisplayCalendar"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_deaths" />
+            app:layout_constraintTop_toBottomOf="@+id/casesDeathText" />
 
         <Button
-            android:id="@+id/bt_select_date"
+            android:id="@+id/buttonDisplayCalendar"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="16dp"
             android:text="@string/bt_select_date"
-            android:visibility="@{viewModel.dataVisibility}"
             app:layout_constraintBottom_toBottomOf="parent" />
 
         <ProgressBar
+            android:id="@+id/progressBarHome"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:visibility="@{viewModel.progressBar}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
