--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,7 +35,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="32dp"
-            android:text="@{String.format(@string/cases_confirmed,viewModel.reportLiveData.confirmedCases)}"
+            android:text="@{String.format(@string/cases_confirmed,viewModel.reportViewData.confirmedCases)}"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/dateTitleText"
             tools:text="Casos confirmados" />
@@ -46,7 +46,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16sp"
-            android:text="@{String.format(@string/deaths_confirmed,viewModel.reportLiveData.deathsCases)}"
+            android:text="@{String.format(@string/deaths_confirmed,viewModel.reportViewData.deathsCases)}"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/casesConfirmedText"
             tools:text="Muertes confirmados" />
