--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,28 +3,34 @@
     <style name="AppTheme" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorPrimaryVariant">@color/colorPrimaryVariant</item>
+        <item name="colorSecondary">@color/colorSecondary</item>
+        <item name="colorSecondaryVariant">@color/colorSecondaryVariant</item>
+        <item name="android:colorBackground">@color/colorBackground</item>
+        <item name="colorSurface">@color/colorSurface</item>
+        <item name="colorError">@color/colorError</item>
+        <item name="colorOnPrimary">@color/colorOnPrimary</item>
+        <item name="colorOnSecondary">@color/colorOnSecondary</item>
+        <item name="colorOnBackground">@color/colorOnBackground</item>
+        <item name="colorOnSurface">@color/colorOnSurface</item>
+        <item name="colorOnError">@color/colorOnError</item>
         <item name="android:windowDisablePreview">true</item>
     </style>
 
     <style name="Title">
         <item name="android:gravity">center_horizontal</item>
         <item name="android:textSize">25sp</item>
-        <item name="android:textColor">@color/black_54</item>
     </style>
 
     <style name="Subtitle">
         <item name="android:gravity">center_horizontal</item>
         <item name="android:textSize">14sp</item>
-        <item name="android:textColor">@color/black_54</item>
         <item name="android:textStyle">bold</item>
     </style>
 
     <style name="SubtitleValue">
         <item name="android:gravity">center_horizontal</item>
         <item name="android:textSize">25sp</item>
-        <item name="android:textColor">@color/black_54</item>
     </style>
 
 </resources>
