--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,6 +41,7 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="32dp"
                 android:text="@{String.format(@string/cases_confirmed,viewModel.reportViewData.data.confirmedCases)}"
+                android:visibility="@{viewModel.reportViewData.data.confirmedCases > 0 ? View.VISIBLE : View.GONE}"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/dateTitleText"
                 tools:text="Casos confirmados" />
@@ -52,6 +53,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16sp"
                 android:text="@{String.format(@string/deaths_confirmed,viewModel.reportViewData.data.deathsCases)}"
+                android:visibility="@{viewModel.reportViewData.data.confirmedCases > 0 ? View.VISIBLE : View.GONE}"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/casesConfirmedText"
                 tools:text="Muertes confirmados" />
